--- a/go.html
+++ b/go.html
@@ -614,7 +614,7 @@
     <!-- MODALS FOR BIOS -->
 
 
-    <!-- Judge Caty Description -->
+    <!-- Judge Caty -->
     <div class="portfolio-modal modal fade" id="modalcaty" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -643,8 +643,121 @@
       </div>
     </div>
 
+    <!-- Judge Feinstein -->
+    <div class="portfolio-modal modal fade" id="modalfeinstein" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Jonathan S. Feinstein</h2>
+                  <p class="item-intro text-muted">Professor of Economics and Management</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
+                  <p>Prof. Johnathan Feinstein is the John G. Searle Professor of Economics and Management at the Yale School of Management. He completed his BA at Stanford University and his PhD in Economics at the Massachusetts Institute of Technology. His current work focuses on models of creativity and creative choice. Professor Feinstein teaches courses on creativity and innovation, statistical modeling, core statistics, and the Math Boot Camp. He formerly served as the Director of the Yale Center for Business and the Environment from 2009-2014. He authored a book called The Nature of Creative Development in 2006 that explores patterns of development seen in creative individuals.</p>
+                  <button class="btn btn-lg" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Judge Killelea -->
+    <div class="portfolio-modal modal fade" id="modalkillelea" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Brigid Killelea, MD, MPH, FACS</h2>
+                  <p class="item-intro text-muted">Associate Professor of Surgery</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
+                  <p>Dr. Brigid Killelea is the Chief of Breast Surgery of the Yale New Haven Health System and the Interim Director of the Smilow Breast Program. She started her medical career as a volunteer with the US Peace Corps in Paraguay. Since then, she has received an MPH from the John Hopkins School of Public Health and an MD from UCONN Medical School. She completed her general surgery residency at St. Vincent’s Medical Center in Manhattan, followed by a breast fellowship. Dr. Kallilea arrived at Yale in 2009, and has actively participated in teaching and evaluating numerous residents. She became Yale’s Fellowship Director in 2015 and is excited to enhance education and development in the Fellows Institute. </p>
+                  <button class="btn btn-lg" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Judge Rosenthal -->
+    <div class="portfolio-modal modal fade" id="modalrosenthal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Ronnie Rosenthal, MD</h2>
+                  <p class="item-intro text-muted">Surgeon-In-Chief, Connecticut VA Hospital</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
+                  <p>Dr. Ronnie Rosenthal, a fellowship-trained surgeon, earned her medical degree from SUNY Downstate Medical Center and currently specializes in geriatric surgery. She is dedicated to helping older patients who suffer from gastrointestinal and biliary diseases. Dr. Rosenthal currently serves as the chair of the American College of Surgeons Geriatric Surgery taskforce. She is also the primary author of Principles and Practice of Geriatric Surgery, a major textbook in this field. In addition, Dr. Rosenthal has led multiple national projects relating to the surgical care of older adults, including the ACS Coalition for Quality in Geriatric Surgery Project. At Yale, Dr. Rosenthal received the Leah Lowenstein Faculty Graduation Award for Promotion of Humane Equalitarian Medical Education. She went on to become a member of the Society of Distinguished Teachers in 2002 and received the Edward H Storer Resident Teaching Award in 2002. </p>
+                  <button class="btn btn-lg" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Judge Rosenthal -->
+    <div class="portfolio-modal modal fade" id="modalstitelman" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>David Stitelman, MD</h2>
+                  <p class="item-intro text-muted">Assistant Professor of Surgery</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
+                  <p>Dr. David H Stitelman, a surgeon in Yale’s Division of Pediatric Surgery, completed his medical training and residency at the University of Pennsylvania. He currently serves as the surgical director of the Yale Fetal Care center. This program allows for families who receive a fetal diagnosis to meet with surgeons, pediatric medical specialists, obstetricians, and neonatologists to plan for management of their child’s care. Besides clinical care, Dr. Stitelman heads a research laboratory that focuses on prenatal therapy. His research hopes to treat and cure genetic and structural diseases before birth. </p>
+                  <button class="btn btn-lg" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript -->
