--- a/go.html
+++ b/go.html
@@ -351,7 +351,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" data-toggle="modal" href="#modalfeinstein">
               <img class="img-fluid" src="img/team/feinstein.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -366,7 +366,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" data-toggle="modal" href="#modalkillelea">
               <img class="img-fluid" src="img/team/killelea.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -381,7 +381,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" data-toggle="modal" href="#modalrosenthal">
               <img class="img-fluid" src="img/team/rosenthal.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -396,7 +396,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" data-toggle="modal" href="#modalstitelman">
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -747,7 +747,7 @@
                   <h2>David Stitelman, MD</h2>
                   <p class="item-intro text-muted">Assistant Professor of Surgery</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <p>Dr. David H Stitelman, a surgeon in Yale’s Division of Pediatric Surgery, completed his medical training and residency at the University of Pennsylvania. He currently serves as the surgical director of the Yale Fetal Care center. This program allows for families who receive a fetal diagnosis to meet with surgeons, pediatric medical specialists, obstetricians, and neonatologists to plan for management of their child’s care. Besides clinical care, Dr. Stitelman heads a research laboratory that focuses on prenatal therapy. His research hopes to treat and cure genetic and structural diseases before birth. </p>
+                  <p>Dr. David H Stitelman, a surgeon in Yale’s Division of Pediatric Surgery, completed his medical training and residency at the University of Pennsylvania. He currently serves as the surgical director of the Yale Fetal Care center. This program allows for families who receive a fetal diagnosis to meet with surgeons, pediatric medical specialists, obstetricians, and neonatologists to plan for management of their child’s care. Besides clinical care, Dr. Stitelman heads a research laboratory that focuses on prenatal therapy. His research hopes to treat and cure genetic and structural diseases before birth.</p>
                   <button class="btn btn-lg" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
