--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Schedule</a>
+              <a class="nav-link js-scroll-trigger" href="#schedule">Schedule</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Challenges</a>
@@ -146,7 +146,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="content-section text-align-left">
+    <section id="schedule" class="content-section text-align-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
