--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="col-lg-6 mx-auto malign text-align-left">
               <p class="intro-text"><br><br><br>A one-day event that brings together individuals from all disciplines and all levels of training to brainstorm solutions to challenges in surgery and pitch for prizes.<br><br><br></p>
 
-              <p class="intro-text">Sign up for more information:</p>
+              <!-- <p class="intro-text">Sign up for more information:</p>
 
-              <a class="typeform-share button" href="https://tejassathe.typeform.com/to/NuJetV" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#03A9F4;color:white;cursor:pointer;font-family:Montserrat,Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border:1px solid #ffffff;border-radius:0px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">LET'S GO </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+              <a class="typeform-share button" href="https://tejassathe.typeform.com/to/NuJetV" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#03A9F4;color:white;cursor:pointer;font-family:Montserrat,Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border:1px solid #ffffff;border-radius:0px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">LET'S GO </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> -->
 
             </div>
           </div>
