--- a/go.html
+++ b/go.html
@@ -183,6 +183,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mx-auto text-center">
+              <a href="https://docs.google.com/spreadsheets/d/1xDjAObZXnHwcDOD-itNNNNrV4TohUApGRp2ddnblXj8/edit#gid=0" class="btn btn-lg" role="button" aria-pressed="true">PITCH PRACTICE</a><br><br><br>
               <a href="https://docs.google.com/spreadsheets/d/1uQDfcLrtSJ08DLjq-Y4lmUVs7JTGq8NTH605E0FSxJg/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">PAIN POINTS</a><br><br><br>
               <a href="https://goo.gl/forms/pYD1a8w6UrMUNeP42" class="btn btn-lg" role="button" aria-pressed="true">REGISTER TEAM</a><br><br><br>
               <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">FINAL PITCHES</a><br><br><br>
