--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <p class="intro-text"><br><br>Presented by CBIT and Yale Surgery<br></p>
-              <p class="intro-text">Saturday, September 29, 2018
-              <br>300 Cedar Street, New Haven, CT</p>
+              <p class="text-white"><br><br>Surgical Services Healthcare Hackathon
+              <br> Behind the Mask </p>
+              <p class="intro-text"><br><br>Presented by Surgical Services, Yale New Haven Health
+              <br> in collaboration with CBIT and Yale Surgery </p>
+              <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
+              <br> & Fri Sept 20 (8:30 am - 4:00 pm)
+              <br>The Blake Hotel: 9 High St. New Haven, CT</p>
 
               <ul>
                 <li><a href="http://twitter.com/"><i class="fab fa-twitter fa-3x"></i></a></li>
@@ -334,7 +338,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Hack the OR 2018</p>
+        <p>Copyright &copy; Hack the OR 2019</p>
       </div>
     </footer>
 
