--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 mx-auto malign align-items-left text-align-left">
-              <img class="img-fluid" src="img/logo1.png" alt="">
+              <img class="img-fluid" src="img/logo2.png" alt="">
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <p class="text-white"><br><br>Surgical Services Healthcare Hackathon
-              <br> Behind the Mask </p>
+              <p class="about-section text-center"><br><br>Surgical Services Healthcare Hackathon: Behind the Mask </p>
               <p class="intro-text"><br><br>Presented by Surgical Services, Yale New Haven Health
               <br> in collaboration with CBIT and Yale Surgery </p>
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
