--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <p class="about-section text-center"><br><br>Surgical Services Healthcare Hackathon: Behind the Mask </p>
+              <p class="mx-auto my-0 text-uppercase"><br><br>Surgical Services Healthcare Hackathon: Behind the Mask </p>
               <p class="intro-text"><br><br>Presented by Surgical Services, Yale New Haven Health
               <br> in collaboration with CBIT and Yale Surgery </p>
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
