--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="col-lg-6 mx-auto malign text-align-left">
-              <p class="intro-text"><br><br><br>A one-day event that brings together individuals from all disciplines and all levels of training to brainstorm solutions to challenges in surgery and pitch for prizes.<br><br><br></p>
+              <p class="intro-text"><br><br><br>A 24-hour event that brings together individuals from all disciplines and all levels of training to brainstorm solutions to challenges in surgery and pitch for prizes.<br><br><br></p>
 
               <!-- <p class="intro-text">Sign up for more information:</p>
 
@@ -162,18 +162,15 @@
             <!-- <h2 style="font-weight:300; font-size: 18pt">FRIDAY (OPTIONAL)</h2> -->
             <!-- <p>7PM - Welcome - TAC Auditorium</p>
             <p>9PM - Networking Reception - Local Venue</p> -->
-            <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
-            <p>8AM - Check in and Breakfast - TAC Lobby</p>
-            <p>9AM - Opening Remarks - TAC Auditorium</p>
-            <p>9:15AM - Keynote Address - Dr. Nita Ahuja</p>
-            <p>9:30AM - Problem Pitches</p>
-            <p>10:30AM - Team Formation</p>
-          </div>
-          <div class="col-md-6">
-            <p>11AM - Hacking Begins</p>
-            <p>12PM - Lunch</p>
-            <p>5PM - Final Pitches</p>
-            <p>6:30PM - Reception & Awards</p>
+            <h2 style="font-weight:300; font-size: 18pt">THURSDAY</h2>
+            <p>5:00 pm: Check in </p>
+            <p>5:30 pm: Opening Remarks</p>
+            <p>6:00 pm: Problem Pitches</p>
+            <p>7:00 pm: Team Formation</p>
+            <h2 style="font-weight:300; font-size: 18pt">FRIDAY</h2>
+            <p>8:30 am: Resume hacking </p>
+            <p>1:00 pm: Project Presentations </p>
+            <p>3:00 pm: Judging + Awards </p>
           </div>
         </div>
 
