--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
+    <!-- <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -304,7 +304,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Sponsored Section -->
     <section id="sponsors" class="content-section text-align-left">
@@ -316,13 +316,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 mx-auto text-align-center valign">
+          <div class="col-lg-4 mx-auto text-align-left valign">
             <img class="img-fluid" src="img/sponsors/CBIT-centered.png" alt="">
           </div>
           <div class="col-lg-4 mx-auto text-align-center valign">
             <img class="img-fluid" src="img/sponsors/city.png" alt="">
           </div>
-          <div class="col-lg-4 mx-auto text-align-center valign">
+          <div class="col-lg-4 mx-auto text-align-right valign">
             <img class="img-fluid" src="img/sponsors/ynhh.png" alt="">
           </div>
         </div>
