--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <p class="text-white mb-4"><br><br>Surgical Services Healthcare Hackathon
+              <p class="text-white mb-4"><br><br>Surgical Services Healthcare Hackathon:
+                <br> Behind the Mask
               </p>
               <p class="intro-text"><br><br>Presented by Surgical Services, Yale New Haven Health
               <br> in collaboration with CBIT and Yale Surgery </p>
@@ -173,6 +174,12 @@
             <p>3:00 pm: Judging + Awards </p>
           </div>
         </div>
+            <img class="img-fluid" src="img/ss_hack.png" alt="">
+        <div class="row">
+
+
+        </div>
+
 
         <!-- https://player.vimeo.com/video/268447442 -->
 
