--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <p class="text-white mb-4"><br><br>Surgical Services Healthcare Hackathon:
+              <p class="text-white mb-8"><br><br>Surgical Services Healthcare Hackathon:
                 <br> Behind the Mask
               </p>
-              <p class="intro-text"><br><br>Presented by Surgical Services, Yale New Haven Health
+              <p class="intro-text"><br>Presented by Surgical Services, Yale New Haven Health
               <br> in collaboration with CBIT and Yale Surgery </p>
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
               <br> & Fri Sept 20 (8:30 am - 4:00 pm)
