--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <p class="text-white mb-8"><br><br>Surgical Services Healthcare Hackathon:
+              <p class="mx-auto text-center"><br><br>Surgical Services Healthcare Hackathon:
                 <br> Behind the Mask
               </p>
               <p class="intro-text"><br>Presented by Surgical Services, Yale New Haven Health
