--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
             <p>3:00 pm: Judging + Awards </p>
           </div>
         </div>
-            <img class="img-fluid" src="img/ss_hack.png" alt="">
-        <div class="row">
 
+        <div class="row">
+            <img class="img-fluid" src="img/ss_hack.png" alt="">
 
         </div>
 
@@ -323,13 +323,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 mx-auto text-align-left valign">
+          <div class="col-lg-4 mx-auto text-align-left halign">
             <img class="img-fluid" src="img/sponsors/CBIT-centered.png" alt="">
           </div>
-          <div class="col-lg-4 mx-auto text-align-center valign">
+          <div class="col-lg-4 mx-auto text-align-center halign">
             <img class="img-fluid" src="img/sponsors/city.png" alt="">
           </div>
-          <div class="col-lg-4 mx-auto text-align-right valign">
+          <div class="col-lg-4 mx-auto text-align-right halign">
             <img class="img-fluid" src="img/sponsors/ynhh.png" alt="">
           </div>
         </div>
