--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@
         <div class="row">
           <div class="col-md-4 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK ONE</h2>
-            <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
-            <p>One of the essential challenges in surgery is to design instruments that are effective, durable, biologically compatible, and practical. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to form novel ideas for solutions that could solve common challenges faced within the operating room.</p>
+            <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspSAFETY&nbsp</span></h2>
+            <p>There is growing need globaly to design operations, workflows and maneuvers that reduce the risk of medical errors. Complications after surgery are among some of the greatest costs to healthcare and can incur tremendous emotional, financial and physical burden on patients and their families. We have an obligation to work towards mitigating these issues as much as possible.</p>
             <!-- <p>Prize 1</p> -->
           </div>
           <div class="col-md-4 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK TWO</h2>
-            <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
-            <p>A key component of the surgical experience takes place outside of the operating room. From clinical diagnosis, to hospital admission, and ultimately follow up, the physical and emotional process of undergoing surgery is often laden with inconveniences and burdens. In this track, we encourage participants to identify problems and propose solutions to improve the overall patient surgical experience.</p>
+            <h2>IMPROVE <span style="background-color: #03a9f4; color: #ffffff">&nbspOUTCOMES&nbsp</span></h2>
+            <p>Technological advancements have given way to outstanding developments in the field of surgery across many specialties and conditions. Still, there are some conditions for which surgical interventions are currently limited. There is incredible potential to adapt mechanical, computational and imaging technologies to expand the capabilities of surgical teams to reduce suffering.  </p>
             <!-- <p>Prize 2</p> -->
           </div>
           <div class="col-md-4 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK THREE</h2>
-            <h2>EMPOWERING   <span style="background-color: #03a9f4; color: #ffffff">&nbspSURGEONS&nbsp</span></h2>
-            <p>Surgeons face many obstacles both inside the operating room and outside. From juggling their various responsibilities in the OR with their responsibilities to their families, combating burnout, to challenging gender and racial disparities, being a surgeon can be both mentally and emotionally taxing. In this track, we encourage participants to challenge the status quo and come up with innovative solutions for the many problems faced by surgeons in their every day lives. </p>
+            <h2>RETAINING  <span style="background-color: #03a9f4; color: #ffffff">&nbspSTAFF&nbsp</span></h2>
+            <p>The demanding needs of surgery can be taxing for surgical teams and staff. Creative strategies to improve structures and reduce staff burn-out is essential to building resilience and improving hospital culture and teamwork, which ultimately benefit patients through the care that they receive. </p>
             <!-- <p>Prize 3</p> -->
           </div>
         </div>
