--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
               <br> & Fri Sept 20 (8:30 am - 4:00 pm)
               <br>The Blake Hotel: 9 High St. New Haven, CT</p>
+              <a href="https://keysurvey.ynhh.org/f/1393150/144f/">Registration</a>
 
               <ul>
                 <li><a href="http://twitter.com/"><i class="fab fa-twitter fa-3x"></i></a></li>
@@ -116,10 +117,6 @@
       </div>
     </section>
 
-
-    <div class='embed-container'>
-      <iframe src='https://player.vimeo.com/video/268447442' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    </div>
 
     <!-- Download Section -->
     <section id="download" class="download-section content-section  text-align-left">
@@ -312,6 +309,14 @@
         </div>
       </div>
     </section> -->
+
+      <section id="hack_video" class="content-section text-align-left">
+        <div class='embed-container'>
+          <iframe src='https://player.vimeo.com/video/268447442' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
+
+      </section>
+
 
     <!-- Sponsored Section -->
     <section id="sponsors" class="content-section text-align-left">
