--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
               <br> & Fri Sept 20 (8:30 am - 4:00 pm)
               <br>The Blake Hotel: 9 High St. New Haven, CT
-              Registration: https://keysurvey.ynhh.org/f/1393150/144f/ </p>
+              <br> Registration: <a href="https://keysurvey.ynhh.org/f/1393150/144f/"></a> </p>
 
               <ul>
                 <li><a href="http://twitter.com/"><i class="fab fa-twitter fa-3x"></i></a></li>
