--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
               <br> in collaboration with CBIT and Yale Surgery </p>
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
               <br> & Fri Sept 20 (8:30 am - 4:00 pm)
-              <br>The Blake Hotel: 9 High St. New Haven, CT
-              <br> Registration: ("https://keysurvey.ynhh.org/f/1393150/144f/") </p>
-
+              <br>The Blake Hotel: 9 High St. New Haven, CT </p>
+              <ul>
+                  Registration: <li><a href="https://keysurvey.ynhh.org/f/1393150/144f/"></a></li>
+              </ul>
+              
               <ul>
                 <li><a href="http://twitter.com/"><i class="fab fa-twitter fa-3x"></i></a></li>
                 <li><a href="http://instagram.com/"><i class="fab fa-instagram fa-3x"></i></a></li>
