--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
               <br> in collaboration with CBIT and Yale Surgery </p>
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
               <br> & Fri Sept 20 (8:30 am - 4:00 pm)
-              <br>The Blake Hotel: 9 High St. New Haven, CT <br>
+              <br>The Blake Hotel: 9 High St. New Haven, CT
+              <br>Registration: https://keysurvey.ynhh.org/f/1393150/144f/
+              
               </p>
-              <a href="https://keysurvey.ynhh.org/f/1393150/144f/">Registration</a>
-
 
               <ul>
                 <li><a href="http://twitter.com/"><i class="fab fa-twitter fa-3x"></i></a></li>
