--- a/index.html
+++ b/index.html
@@ -64,16 +64,15 @@
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <h1 class="mx-auto text-center"><br><br>Surgical Services Healthcare Hackathon:
-                <br> Behind the Mask
-              </h1>
+              <h1 class="mx-auto my-0 text-uppercase">Surgical Services Healthcare Hackathon:
+                <br> Behind the Mask </h1>
               <p class="intro-text">Presented by Surgical Services, Yale New Haven Health
               <br> in collaboration with CBIT and Yale Surgery </p>
               <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm)
               <br> & Fri Sept 20 (8:30 am - 4:00 pm)
               <br>The Blake Hotel: 9 High St. New Haven, CT
               <br>Registration: https://keysurvey.ynhh.org/f/1393150/144f/
-              
+
               </p>
 
               <ul>
