--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 mx-auto malign align-items-left text-align-left">
+            <div class="col-lg-6 mx-auto malign align-items-right text-align-left">
               <img class="img-fluid" src="img/logo2.png" alt="">
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
