--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 mx-auto malign align-items-right text-align-left">
+            <div class="col-lg-6 mx-auto malign align-items-left text-align-left">
               <img class="img-fluid" src="img/logo2.png" alt="">
               <!-- <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1> -->
               <!-- <h2>@ AT YALE SCHOOL OF MEDICINE<br><br><br></h2> -->
-              <h2 class="intro-text">Surgical Services Healthcare Hackathon: Behind the Mask <br> </h2>
+              <h2 class="intro-text"><br> Surgical Services Healthcare Hackathon: Behind the Mask <br> </h2>
               <p class="intro-text">Presented by Surgical Services, Yale New Haven Health in collaboration with CBIT and Yale Surgery </p>
-              <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm) & Fri Sept 20 (8:30 am - 4:00 pm)
+              <p class="intro-text">Thurs Sept 19 (5:00 pm- 8:00 pm) <br> & Fri Sept 20 (8:30 am - 4:00 pm)
               <br>The Blake Hotel: 9 High St. New Haven, CT
               <br>Registration: https://keysurvey.ynhh.org/f/1393150/144f/
 
