--- a/index.html
+++ b/index.html
@@ -308,12 +308,12 @@
       </div>
     </section> -->
 
-      <section id="hack_video" class="content-section text-align-left">
+      <!-- <section id="hack_video" class="content-section text-align-left">
         <div class='embed-container'>
           <iframe src='https://player.vimeo.com/video/268447442' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
 
-      </section>
+      </section> -->
 
 
     <!-- Sponsored Section -->
