--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Hack the
-          <span style="background-color: #03a9f4">&nbspOR&nbsp</span></a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Behind the
+          <span style="background-color: #03a9f4">&nbspMASK&nbsp</span></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
